# s-vet

./: .gitignore  README.md  dev.sh  docker-compose.yml  shell.nix
.github/workflows/: build-deploy.yaml  build-publish-server.yml  build-publish-web-app.yml  deploy.yml
nginx-conf/: s-vet.conf
s-vet/: .dockerignore  .gitignore  .hlint.yaml  Dockerfile  Procfile  README.md  TODO.md  build-and-exec.sh  cabal.project  floskell.json  fourmolu.yaml  hie.yaml  s-vet.cabal  shell.nix
s-vet-web/: .dockerignore  .gitignore  Dockerfile  craco.config.js  docker.conf.d  package.json  static.json
s-vet-web/.github/workflows/: docker-image.yml
s-vet-web/public/: index.html
s-vet-web/src/: App.less  App.tsx  Appointments.tsx  CancelButton.tsx  Descriptions.tsx  FocusView.tsx  ModalFooter.tsx  Navigation.tsx  Price.tsx  TableView.tsx  WeekCalendar.tsx  api.ts  hooks.ts  index.tsx  selectors.ts  store.ts  types.ts
s-vet-web/src/Acts/: ActModal.tsx  ActSelect.tsx  NewActModal.tsx  UpdateActModal.tsx  index.ts  state.ts
s-vet-web/src/Consultations/: Consultation.tsx  ConsultationPreview.tsx  Consultations.tsx  NewConsultationModal.tsx  Previous.tsx  index.ts  state.ts
s-vet-web/src/Dashboard/: Dashboard.tsx  index.ts  state.ts
s-vet-web/src/Home/: Home.tsx  index.ts  state.ts
s-vet-web/src/Login/: Login.tsx  index.ts  state.ts
s-vet-web/src/Owners/: NewOwnerModal.tsx  Owner.tsx  OwnerPreview.tsx  OwnerSelect.tsx  Owners.tsx  index.ts  state.ts
s-vet-web/src/Pets/: NewPetModal.tsx  Pet.tsx  PetForm.tsx  PetPreview.tsx  PetSelect.tsx  Pets.tsx  index.ts  state.ts
s-vet-web/src/Settings/: PasswordForm.tsx  Settings.tsx  TariffsAndSchedule.tsx  index.ts  state.ts
s-vet-web/src/assets/: logo final CVAZN.xcf
s-vet-web/src/redux/: store.ts
s-vet/.github/workflows/: docker-image.yml
s-vet/app/: Main.hs
s-vet/inserter/: Main.hs
s-vet/src/: SVet.hs
s-vet/src/SVet/: API.hs  Authentication.hs  Constants.hs  Domain.hs  Logging.hs  Repository.hs  Selda.hs  ServerError.hs  TH.hs  Timing.hs  Tracing.hs
s-vet/src/SVet/API/: Acts.hs  Authentication.hs  Consultations.hs  Internal.hs  Owners.hs  Pets.hs  Settings.hs  Statistics.hs  Treatments.hs
s-vet/src/SVet/Domain/: Account.hs  Authentication.hs  Entities.hs  Internal.hs  Settings.hs  Statistics.hs
s-vet/src/SVet/Repository/: Act.hs  Consultations.hs  Crypt.hs  Internal.hs  Owner.hs  Pet.hs  Settings.hs  Statistics.hs  Tables.hs  Treatment.hs
s-vet/src/SVet/Repository/Tables/: V1.hs
s-vet/test/: Spec.hs
